2004-09-20  Tim Gerla  <tim@gerla.net>

	* configure.in:
	* Makefile.am: add --disable-update-mimedb to disable calling
		       update-mime-database on install. 

2004-09-19  Enver ALTIN  <ealtin@parkyeri.com>

	* configure.in: Added Turkish to ALL_LINGUAS.

2004-08-07  Todd Berman  <tberman@off.net>

	* configure.in: small changes for the 0.5.1 release on sunday.

2004-07-08  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* build/data/resources/icons/Nemerle.File.Form
	* build/data/resources/icons/Nemerle.Project.Form
	* build/data/resources/icons/Makefile.am:
	add Form icons for Nemerle.

2004-07-05  Todd Berman  <tberman@off.net>

	* configure.in:
	* Makefile.am:
	* monodevelop.in: Patch from Marcin Krzyzanowski <krzak@pld-linux.org>
	to fix mint issues.

2004-07-05  Todd Berman  <tberman@off.net>

	* Makefile.ams: remove libdir == $(prefix)/lib assumption. Patch from
	Marcin Krzyzanowski <krzak@pld-linux.org>

2004-07-05  Todd Berman  <tberman@off.net>

	* configure.in:
	* Makefile.am:
	* libmonodevelop: Removed libmonodevelop.

2004-07-04  Todd Berman  <tberman@off.net>

	* *: Fixup to work on macosx OOB, at least a bit better.

2004-07-03  John Luke  <jluke@cfl.rr.com>

	* README: update dependency versions
	* configure.in: set mono dep to 1.0

2004-07-01  Todd Berman  <tberman@off.net>

	* *: This is a huge changeset, so instead of annotating in every
	possible place, I will explain the changeset here.

	First, ResourceService.GetString was removed as it is a call that
	is used for translation purposes in #D, and we use gettext to
	handle translation.

	Then, IResourceService was removed as it is useless now (just had
	a GetString call). All files were updated to not use IResourceService
	and in many cases, the resource service was able to be completely
	removed.

	The StringParserService has a way of allowing ${res:key} strings to
	be localized through the ResourceService.GetString. Because this
	functionality was removed, and any use of it is an error now, I