@@ -66,15 +66,30 @@ else
 fi
 
 
+GTK_SHARP_2_0=no
+
+AC_ARG_WITH(gtk-sharp-2-0, [  --with-gtk-sharp-2-0=yes,no
+        If you want to build with gtk-sharp-2.0 default=no],[
+	if test x$with_gtk_sharp_2_0 = xyes; then
+		GTK_SHARP_2_0=yes
+	fi
+])
+
 dnl hard dependencies
 GTKSHARP_REQUIRED_VERSION=1.0
 GTKSOURCEVIEWSHARP_REQUIRED_VERSION=0.5
 GECKOSHARP_REQUIRED_VERSION=0.5
 MONODOC_REQUIRED_VERSION=1.0
 
-PKG_CHECK_MODULES(BASE_DEPENDENCIES, gtk-sharp >= $GTKSHARP_REQUIRED_VERSION glade-sharp >= $GTKSHARP_REQUIRED_VERSION gconf-sharp >= $GTKSHARP_REQUIRED_VERSION
-gnome-sharp >= $GTKSHARP_REQUIRED_VERSION gtkhtml-sharp >= $GTKSHARP_REQUIRED_VERSION gtksourceview-sharp >= $GTKSOURCEVIEWSHARP_REQUIRED_VERSION gecko-sharp >= $GECKOSHARP_REQUIRED_VERSION monodoc >= $MONODOC_REQUIRED_VERSION)
-AC_SUBST(BASE_DEPENDENCIES_LIBS)
+if test x$GTK_SHARP_2_0 = xyes; then
+	PKG_CHECK_MODULES(BASE_DEPENDENCIES, gnome-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION glade-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION gconf-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION gtkhtml-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION)
+	PKG_CHECK_MODULES(EXTRA_CRAP, gtksourceview-sharp >= $GTKSOURCEVIEWSHARP_REQUIRED_VERSION gecko-sharp >= $GECKOSHARP_REQUIRED_VERSION monodoc >= $MONODOC_REQUIRED_VERSION)
+	BASE_DEPENDENCIES_LIBS=${BASE_DEPENDENCIES_LIBS}${EXTRA_CRAP_LIBS}	
+	AC_SUBST(BASE_DEPENDENCIES_LIBS)
+else
+	PKG_CHECK_MODULES(BASE_DEPENDENCIES, gtk-sharp >= $GTKSHARP_REQUIRED_VERSION glade-sharp >= $GTKSHARP_REQUIRED_VERSION gconf-sharp >= $GTKSHARP_REQUIRED_VERSION gnome-sharp >= $GTKSHARP_REQUIRED_VERSION gtkhtml-sharp >= $GTKSHARP_REQUIRED_VERSION gtksourceview-sharp >= $GTKSOURCEVIEWSHARP_REQUIRED_VERSION gecko-sharp >= $GECKOSHARP_REQUIRED_VERSION monodoc >= $MONODOC_REQUIRED_VERSION)
+	AC_SUBST(BASE_DEPENDENCIES_LIBS)
+fi
 
 gtksharp_prefix=`pkg-config --variable=prefix gtk-sharp`
 AC_SUBST(gtksharp_prefix)
